Add flake8 pip package

--- a/provision.yml
+++ b/provision.yml
@@ -156,6 +156,7 @@
     with_items:
       - virtualenvwrapper
       - powerline-status
+      - flake8
 
   # Vim plugins
   #- name: Compile Command-T VIM plugin.
