--- a/provision.yml
+++ b/provision.yml
@@ -181,6 +181,7 @@
     with_items:
      - bower
      - grunt-cli
+     - jshint
 
   - name: Disable avahi service
     service: name=avahi-daemon enabled=no state=stopped
